--- a/box.css
+++ b/box.css
@@ -1,7 +1,7 @@
 .box1 {
   height: 300px;
   width: 300px;
-  background-color: #ff0000;
+  background-color: green;
   padding: 30px;
   margin: 30px;
 }
